--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.9.4",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-loader-spinner": "^6.1.6",
+    "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
