--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "aos": "^3.0.0-beta.6",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
@@ -19,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.1.1",
     "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
