--- a/package.json
+++ b/package.json
@@ -9,21 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.3",
     "aos": "^3.0.0-beta.6",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.4",
     "next": "14.1.4",
-    "next-auth": "^4.24.7",
-    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-loader-spinner": "^6.1.6",
-    "react-redux": "^9.1.1",
     "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
